grammar.js
    source_file: ($) => seq(optional($.shebang), repeat($._statement)),

    _statement: ($) => choice($.expression_statement, $._declaration_statement),

    expression_statement: ($) =>
      choice(seq($._expression, ";"), prec(1, $._expression_ending_with_block)),

    _declaration_statement: ($) =>
      choice(
        $.const_item,
        $.empty_statement,
        $.attribute_item,
        $.inner_attribute_item,
        $.mod_item,
        $.struct_item,
        $.type_item,
        $.function_item,
        $.function_signature_item,
        $.impl_item,
        $.trait_item,
        $.associated_type,
        $.let_declaration,
        $.import_declaration,
      ),

    // Section - Declarations

    declaration_list: ($) => seq("{", repeat($._declaration_statement), "}"),

    struct_item: ($) =>
      seq(
        optional($.visibility_modifier),
        "struct",
        field("name", $._type_identifier),
        field("type_parameters", optional($.type_parameters)),
        field("body", $.struct_body),
      ),

    struct_body: ($) =>
      seq(
        "{",
        field("fields", optional($.field_declaration_list)),
        field("declarations", repeat($._declaration_statement)),
        "}",
      ),

    field_declaration_list: ($) =>
      seq(
        sepBy1(",", seq(repeat($.attribute_item), $.field_declaration)),
        optional(","),
      ),

    field_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        field("name", $._field_identifier),
        ":",
        field("type", $._type),
      ),

    function_item: ($) =>
      seq(
        optional($.visibility_modifier),
        optional($.extern_modifier),
        "fn",
        field("name", choice($.identifier, $.metavariable)),
        field("type_parameters", optional($.type_parameters)),
        field("parameters", $.parameters),
        field("return_type", $._type),
        field("body", $.block),
      ),

    function_signature_item: ($) =>
      seq(
        optional($.visibility_modifier),
        optional($.extern_modifier),
        "fn",
        field("name", choice($.identifier, $.metavariable)),
        field("type_parameters", optional($.type_parameters)),
        field("parameters", $.parameters),
        field("return_type", $._type),
        ";",
      ),

    impl_item: ($) =>
      seq(
        "impl",
        seq(
          field("trait", choice($._type_identifier, $.scoped_type_identifier)),
          "for",
        ),
        field("type", $._type),
        field("body", $.declaration_list),
      ),

    type_parameters: ($) =>
      prec(
        1,
        seq(
          "<",
          sepBy1(
            ",",
            seq(
              repeat($.attribute_item),
              choice($.metavariable, $.type_parameter),
            ),
          ),
          optional(","),
          ">",
        ),
      ),

    type_parameter: ($) =>
      prec(
        1,
        seq(
          field("name", $._type_identifier),
          optional(seq("=", field("default_type", $._type))),
        ),
      ),

    let_declaration: ($) =>
      seq(
        "let",
        optional($.mutable_specifier),
        field("identifier", $.identifier),
        optional(seq(":", field("type", $._type))),
        optional(seq("=", field("value", $._expression))),
        ";",
      ),

    parameters: ($) =>
      seq("(", sepBy(",", seq(optional($.attribute_item), $.parameter)), ")"),

    parameter: ($) =>
      seq(field("identifier", $.identifier), ":", field("type", $._type)),

    visibility_modifier: (_) => "pub",

    // Section - Types

    _type: ($) =>
      choice(
        $.reference_type,
        $.metavariable,
        $.generic_type,
        $.scoped_type_identifier,
        $.tuple_type,
        $.array_type,
        $.function_type,
        $._type_identifier,
        $.never_type,
        alias(choice(...primitiveTypes), $.primitive_type),
      ),

    generic_function: ($) =>
      prec(
        1,
        seq(
          field(
            "function",
            choice($.identifier, $.scoped_identifier, $.field_expression),
          ),
          "::",
          field("type_arguments", $.type_arguments),
        ),
      ),

    generic_type: ($) =>
      seq(
        field(
          "type",
          choice(
            $._type_identifier,
            $.scoped_identifier,
            $.scoped_type_identifier,
          ),
        ),
        "::",
        field("type_arguments", $.type_arguments),
      ),

    type_arguments: ($) =>
      seq("<", sepBy1(",", choice($._type, $._literal, $.block)), ">"),

    reference_type: ($) =>
      seq("&", optional($.mutable_specifier), field("type", $._type)),

    _expression_except_range: ($) =>
      choice(
        $.unary_expression,
        $.reference_expression,
        $.try_expression,
        $.dereference_expression,
        $.binary_expression,
        $.assignment_expression,
        $.compound_assignment_expr,
        $.type_cast_expression,
        $.call_expression,
        $.return_expression,
        $._literal,
        prec.left($.identifier),
        alias(choice(...primitiveTypes), $.identifier),
        $.self,
        $.scoped_identifier,
        $.generic_function,
        $.field_expression,
        $.array_expression,
        $.tuple_expression,
        $.break_expression,
        $.index_expression,
        $.metavariable,
        $.parenthesized_expression,
        $.struct_expression,
        $._expression_ending_with_block,
      ),

    _expression: ($) => choice($._expression_except_range, $.range_expression),

    _expression_ending_with_block: ($) =>
      choice($.block, $.if_expression, $.while_expression, $.loop_expression),

    unary_expression: ($) =>
      prec(PREC.unary, seq(choice("-", "!"), $._expression)),

    reference_expression: ($) =>
      prec(
        PREC.unary,
        seq("&", optional($.mutable_specifier), field("value", $._expression)),
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.and, "&&"],
        [PREC.or, "||"],
        [PREC.bitand, "&"],
        [PREC.bitor, "|"],
        [PREC.bitxor, "^"],
        [PREC.comparative, choice("==", "!=", "<", "<=", ">", ">=")],
        [PREC.shift, choice("<<", ">>")],
        [PREC.additive, choice("+", "-")],
        [PREC.multiplicative, choice("*", "/", "%")],
        [PREC.range, "|>"],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            // @ts-ignore
            precedence,
            seq(
              field("left", $._expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    return_expression: ($) =>
      choice(prec.left(seq("return", $._expression)), prec(-1, "return")),

    call_expression: ($) =>
      prec(
        PREC.call,
        seq(
          field("function", $._expression_except_range),
          field("arguments", $.arguments),
        ),
      ),

    arguments: ($) =>
      seq(
        "(",
        sepBy(",", seq(repeat($.attribute_item), $._expression)),
        optional(","),
        ")",
      ),

    struct_expression: ($) =>
      seq(
        field(
          "name",
          choice(
            $._type_identifier,
            alias(
              $.scoped_type_identifier_in_expression_position,
              $.scoped_type_identifier,
            ),
            $.generic_type,
          ),
        ),
        field("body", $.field_initializer_list),
      ),

    field_initializer_list: ($) =>
      seq(
        "{",
        sepBy(",", choice($.shorthand_field_initializer, $.field_initializer)),
        optional(","),
        "}",
      ),

    field_initializer: ($) =>
      seq(
        repeat($.attribute_item),
        field("field", choice($._field_identifier, $.integer_literal)),
        ":",
        field("value", $._expression),
      ),

    field_expression: ($) =>
      prec(
        PREC.field,
        seq(
          field("value", $._expression),
          ".",
          field("field", choice($._field_identifier, $.integer_literal)),
        ),
      ),

    block: ($) => seq("{", repeat($._statement), optional($._expression), "}"),

    // Section - Literals

    _literal: ($) =>
      choice(
        $.string_literal,
        $.char_literal,
        $.boolean_literal,
        $.integer_literal,
        $.float_literal,
      ),

    integer_literal: (_) =>
      token(
        seq(
          choice(/[0-9][0-9_]*/, /0x[0-9a-fA-F_]+/, /0b[01_]+/, /0o[0-7_]+/),
          optional(choice(...numericTypes)),
        ),
      ),

    float_literal: (_) =>
      token(
        seq(
          choice(
            /[0-9][0-9_]*\.[0-9][0-9_]*/,
            /0x[0-9a-fA-F_]+\.[0-9a-fA-F_]+/,
            /0b[01_]+\.[01_]+/,
            /0o[0-7_]+\.[0-7_]+/,
          ),
          optional(choice(...numericTypes)),
        ),
      ),

    string_literal: ($) =>
      seq('"', repeat(choice($.escape_sequence, $.string_content)), '"'),

    string_content: (_) => token(/[^"]+/),

    char_literal: (_) =>
      token(
        seq(
          "'",
          optional(
            choice(
              seq(
                "\\",
                choice(
                  /[^xu]/,
                  /u[0-9a-fA-F]{4}/,
                  /u\{[0-9a-fA-F]+\}/,
                  /x[0-9a-fA-F]{2}/,
                ),
              ),
              /[^\\']/,
            ),
          ),
          "'",
        ),
      ),

    boolean_literal: (_) => choice("true", "false"),

    identifier: (_) => /[@_\p{XID_Start}][_\p{XID_Continue}]*/u,

    _type_identifier: ($) => alias($.identifier, $.type_identifier),
    _field_identifier: ($) => alias($.identifier, $.field_identifier),

    self: (_) => "self",
    metavariable: (_) => /\$[a-zA-Z_]\w*/,
  },
});

/**
 * Creates a rule to match one or more of the rules separated by the separator.
 *
 * @param {RuleOrLiteral} sep - The separator to use.
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function sepBy1(sep, rule) {
  return seq(rule, repeat(seq(sep, rule)));
}

/**
 * Creates a rule to optionally match one or more of the rules separated by the separator.
 *
 * @param {RuleOrLiteral} sep - The separator to use.
 * @param {RuleOrLiteral} rule
 *
 * @returns {ChoiceRule}
 */
function sepBy(sep, rule) {
  return optional(sepBy1(sep, rule));
}
